--- a/css/style.css
+++ b/css/style.css
@@ -189,10 +189,6 @@
   object-position: top;
 }
 
-.gallery .grid-container:has(:hover) img:not(:hover) {
-  opacity: 0.8;
-}
-
 .gallery .image-container {
   margin: 10vh auto;
   display: grid;
@@ -206,7 +202,7 @@
 }
 
 .gallery .image-container img:hover {
-  scale: 1.025;
+  scale: 1.0125;
   border-color: #d16033;
 }
 
@@ -1215,12 +1211,12 @@ img {
 #container section article p::first-letter {
   text-transform: capitalize;
 }
-#container section iframe {
+#container section article iframe {
   margin: 5vh auto;
   border-radius: 0.5rem;
-  border: 1px solid #4F352C;
   width: 100%;
   height: 50vh;
+  border: 1px solid #4F352C;
 }
 
 /*# sourceMappingURL=style.css.map */
