--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -30,13 +30,14 @@
             // max-height: 50vh;
         }
 
-        &:has(:hover){
-        img {
-            &:not(:hover){
-                opacity: .8;
-            }
-        }
-    }
+    //     &:has(:hover){
+    //     img {
+    //         &:not(:hover){
+    //             opacity: .8;
+    //         }
+    //     }
+    // }
+    
     }
 
     .image-container {
@@ -51,7 +52,7 @@
             border: 1px solid transparent;
             
             &:hover {
-                scale: 1.025;
+                scale: 1.0125;
                 border-color: abstracts.$text-link;
             }
 
