--- a/css/style.css
+++ b/css/style.css
@@ -343,10 +343,10 @@ footer a {
   font-size: clamp(.95rem, 1.5vw, 1rem);
   width: max-content;
   padding: 0.125rem 0.5rem;
+  color: #f4f4f4;
+  background: #4e4831;
   border: 1px solid;
-  border-right-color: transparent;
-  border-left-color: transparent;
-  border-radius: 0.5rem;
+  border-radius: 0.25rem;
   cursor: default;
   transition: 200ms;
   position: relative;
@@ -1190,7 +1190,7 @@ img {
   }
 }
 #container section {
-  padding: 5vh 5vw;
+  padding: 10vh 5vw;
   max-width: 100%;
 }
 #container section h2 {
@@ -1201,6 +1201,7 @@ img {
   border-radius: 0.25rem;
   background: #efefeb;
   padding: 1rem;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
 }
 #container section article h2 {
   margin-bottom: 1rem;
@@ -1212,7 +1213,7 @@ img {
   text-transform: capitalize;
 }
 #container section article iframe {
-  margin: 5vh auto;
+  margin: 5vh auto 0;
   border-radius: 0.5rem;
   width: 100%;
   height: 50vh;
