--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -49,12 +49,14 @@
             
             width: max-content;
             padding: 0.125rem 0.5rem;
-            // color: abstracts.$text-light;
+            color: abstracts.$text-light;
+            background: abstracts.$background-dark;
             
             border: 1px solid;
-            border-right-color: transparent;
-            border-left-color: transparent;
-            border-radius: abstracts.$border-radius-md;
+            // border-right-color: transparent;
+            // border-bottom-color: transparent;
+            // border-left-color: transparent;
+            border-radius: abstracts.$border-radius-sm;
 
             cursor: default;
             transition: 200ms;
