--- a/sass/style.scss
+++ b/sass/style.scss
@@ -86,7 +86,7 @@ img {
 
     section {
         // border: 2px solid red;
-        padding: 5vh 5vw;
+        padding: 10vh 5vw;
         max-width: 100%;
 
         h2 {
@@ -99,6 +99,8 @@ img {
             border-radius: 0.25rem;
             background: $background-gray;
             padding: 1rem;
+            box-shadow: 0 0.5rem 1rem hsla(0, 0%, 0%, 0.150);
+
 
             h2 {
                 margin-bottom: 1rem;
@@ -112,7 +114,7 @@ img {
             }
 
             iframe {
-                margin: 5vh auto;
+                margin: 5vh auto 0;
                 border-radius: 0.5rem;
                 width: 100%;
                 height: 50vh;
