--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -49,10 +49,10 @@
             
             width: max-content;
             padding: 0.125rem 0.5rem;
-            color: abstracts.$text-light;
+            color: hsl(42, 48%, 90%);
             background: abstracts.$background-dark;
             
-            border: 1px solid;
+            // border: 1px solid;
             // border-right-color: transparent;
             // border-bottom-color: transparent;
             // border-left-color: transparent;
