--- a/sass/abstracts/_colors.scss
+++ b/sass/abstracts/_colors.scss
@@ -15,11 +15,13 @@ $brand-overlay: #a6b2bf;
 
 // TEXT COLORS
 $text-brand: #4F352C;
+$text-brand-light: hsl(42, 48%, 90%);
 $text-main: #000;
 $text-light: #f4f4f4;
 $text-dark: #000;
 $text-link: #D15F33;
 $text-link: hsl(17, 63%, 51%);
+$text-link-light: hsl(17, 63%, 89%);
 $text-link-green: hsl(120, 63%, 25%);
 $text-nav: hsl(42, 48%, 90%);
 $text-placeholder: hsl(0, 0%, 24%);
