--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -22,8 +22,7 @@
     
     a {
         color: #C3A356;
-        color: abstracts.$text-light;
-        color: hsl(42, 48%, 90%);
+        color: abstracts.$text-brand-light;
 
         &:hover {
             color: abstracts.$text-light;
