--- a/css/style.css
+++ b/css/style.css
@@ -270,11 +270,17 @@ footer .contact-details ul > li, footer .contact-details p {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 0.5rem;
+  gap: 0.25rem;
 }
 
 footer .contact-details .icon {
   display: inline;
+}
+
+footer .contact-details:hover a {
+  text-decoration-color: #d16033;
+  text-underline-offset: 0;
+  color: #f5dbd1;
 }
 
 footer .copyright {
@@ -294,8 +300,10 @@ footer p {
 
 footer a {
   color: #d16033;
-  text-decoration: none;
+  text-decoration-color: transparent;
   position: relative;
+  transition: 250ms ease;
+  text-underline-offset: 6px;
 }
 
 #nav {
@@ -317,7 +325,6 @@ footer a {
 
 #nav a {
   color: #C3A356;
-  color: #f4f4f4;
   color: #f2ead9;
 }
 
