--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -62,7 +62,8 @@
 .hero-img {
     // border-bottom: 2px solid abstracts.$text-link-green;
     overflow: hidden;
-    
+    box-shadow: 0 0.5rem 1rem hsla(0, 0%, 0%, 1);
+    box-shadow: 0 0.5rem 1rem hsla(0, 0%, 0%, 0.150);
     img {
         height: 100%;
         width: 100%;
@@ -73,7 +74,7 @@
     }
 
     @include abstracts.lg {
-
+        box-shadow: none;
         border: none;
         border-radius: 0.25rem;
         // height: 400px;
