--- a/css/style.css
+++ b/css/style.css
@@ -266,15 +266,31 @@ footer .contact-details.contact-details-1 {
   border-bottom: 1px solid #c3c3b1;
 }
 
-footer .contact-details ul > li, footer .contact-details p {
+footer .contact-details ul > li {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 0.25rem;
 }
 
+footer .contact-details .contact-name {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+footer .contact-details .contact-name p {
+  font-weight: 600;
+}
+
 footer .contact-details .icon {
   display: inline;
+}
+
+footer .contact-details:hover .contact-name .icon {
+  opacity: 0.5;
 }
 
 footer .contact-details:hover a {
