--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -239,9 +239,14 @@
     text-decoration-color: transparent;
     text-underline-offset: 5px;  
     transition: 150ms;
+    cursor: default;
+
+    @include abstracts.lg {
+        cursor: pointer;
+    }
 
     &:hover {
-        text-decoration-color: inherit;
+        text-decoration-color: abstracts.$text-link;
         text-underline-offset: 2px;
     }
 }
